frontend/src/app.css
/* ... */
/* .elementisbeingdragged {
  border: 5px solid red !important;;
} */

.elementisbeingdragged .board-grid {
  scroll-snap-type: unset !important;
}





.card-grid {
  overflow: hidden;
}



@media (max-width:991px) {
  .card.sortable-drag {
    display: none !important
  }
}

.sortable-ghost-board * {
  opacity: 0 !important;

}

.contexttitle {
  display: flex;
  gap: 20px;
  font-size: 1.5rem;
  align-items: center;
}



.locked .grabber-board,
.locked .editorOpentoggle,
.locked .grabber,
.locked .cardcontrols-move,
.locked .cardcontrols-delete,
.locked .editor-controls {
  display: none !important;
}


.canmove .grabber-board,
.canmove .editorOpentoggle,
.canmove .grabber,
.canmove .cardcontrols-move,
.canmove .cardcontrols-delete,
.canmove .editor-controls {
  pointer-events: none;
  opacity: 0.9;
}

.canmove .card {
  opacity: 0.6;
  pointer-events: none;
}

.locked .milkdown .editor {
  padding: 0px;
}

.locked .milkdown h1:first-child {
  display: none;
}

.locked .milkdown .editor {
  border: 1px solid transparent;
  /* pointer-events: none; */
}

.locked .filename {
  display: none;
}

.grid.locked .readmodetoggle {
  display: none
}


/* MINICARD-CONTAINER */
.minicard-container .feed-btn a,
.minicard-container .editor-panel a {
  padding: 10px;
}

.minicard-container .thumb a {
  pointer-events: none;
}

.minicard-container .card {
  grid-template-rows: auto;
  grid-template-columns: subgrid;
  gap: 14px;
  min-height: 83px;
  max-width: 100%;
  grid-template-rows: auto;
  grid-template-columns: subgrid;
  gap: 14px;
  min-height: 83px;
  max-width: 100%;
  gap: 8px;
  min-height: 54px;
  padding: 5px !important;
}

.minicard-container .card .card-container---controls {
  grid-column: span 3;
}

.minicard-container .card .card-container---info {
  grid-column: span 2;
}

.minicard-container .card .thumb {
  max-height: 100px;
  overflow: hidden;
}

.minicard-container .card .updates {
  max-height: 29px;
}

.minicard-container .card .card-container---controls {
  position: absolute;
  bottom: 0;
  right: 10px;
}

.minicard-container .updates {
  color: var(--main-font-1);
}


.minicard-container .progress-bar {
  grid-column: span 2;
  margin-top: 6px;
}


/* MINICARD-CONTAINER */

/* CALENDAR CONTAINER */

.calendarcard-container .card .date {
  display: none;
}

.calendarcard-container .controls {
  display: none;
}

.calendarcard-container .link {
  display: none;
}

.calendarcard-container .card-grid.list {
  background: var(--container-bg);
  border: 4px solid var(--container-bg);
  border-left: 0px;
}

.calendarcard-container .border-left {
  right: 0px;
  left: auto !important;
}



.calendarcard-container .updates {
  font-size: 1.1rem;
}

.calendarcard-container .img-c {
  max-height: 160px;
}


.minicard-container.calendarcard-container .card {
  padding-bottom: 9px !important;
}



/* CALENDAR CONTAINER */
.locked .labelcolor {
  display: none !important;
}









.milkdown ul {
  list-style-type: none;
}


.milkdown .list-item {
  display: flex;
  align-content: center;
  align-items: center;
  gap: 7px;
}

.milkdown .list-item input {
  margin: 0px;
}

.milkdown ul {
  padding-inline-start: 20px;
}

milkdown-list-item-block .label-wrapper {
  pointer-events: all;
}

.debug {
  display: none !important;
  color: white;
}

.debug-id {
  background: teal;
  color: white;
  border-radius: 10px;
  padding: 0 10px;
}


.editor-incontainer .picmo {
  right: 0;
  bottom: 0;
}

.picmo * {
  font-family: 'Spec';
}

.picmo__light,
.picmo__auto {

  --accent-color: var(--button-bg) !important;
  /* background-color: var(--body-background) !important; */
}

.emojibtn {
  transition: all .3s
}

.locked .emojibtn {
  opacity: 0;
  pointer-events: none;
}

.milkdown code {
  opacity: 0.5;
  font-family: "Consolas", "terminus"
}

.locked code {
  display: none;
}

.readonly .label-wrapper {
  pointer-events: none !important;
}

.label.monitor {
  cursor: pointer;
}












/* breadcrumb */

@media (min-width: 991px) {
  .contextmenu-btn {
    padding: 1px 13px;
  }
}

.contextmenu-link {
  color: var(--header-color);
  opacity: 0.7;
}

.contextmenu-link a {
  color: var(--header-color);
}


.breadcrumb {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

.locked .remove-file {
  pointer-events: none;
  display: none !important;
}

.fullview .filepreview-editor-inside {
  display: none !important;
}

.workspacepage .board-container .absolute.controls {
  display: none !important;
}


.calendar-result .board-header .img-c {
  max-width: 29px;
  max-height: 29px;
}

.minibutton {
  background: var(--button-bg);
  color: var(--button-color) !important;
  padding: 3px 10px;
  display: block;
  border-radius: 10px;
  font-weight: 500;
  position: relative;
  z-index: 2;
  width: fit-content;
  font-size: 1rem;
  text-decoration: none;
}

.minibutton:hover {
  text-decoration: none;
}

blockquote {
  background: var(--container-bg);
  padding: 3px;
  padding-left: 10px;
  margin: 15px;
}

li[data-checked="true"]::before {
  content: '☑ ';
}

li[data-checked="false"]::before {
  content: '☐ ';
}

.task-item {
  display: flex !important;
  align-items: center;
}

.task-item:before {
  display: none;
}

.task-item input {
  margin: 0;
  margin-right: 10px;
}

.date-mark {
  background: var(--board-title-color);
  color: var(--button-color);
  border-radius: 20px;
  padding: 2px 9px;
  width: fit-content;
}

.date-mark:before {
  content: '🗓️ ';
  display: inline;
}

.doneelement {
  background: #3b88c3;
  color: white;
  border-radius: 20px;
  padding: 2px 9px;
  width: fit-content;
}

.doneelement[data-done="100"] {
  background: var(--complete);
  color: white;
}

.doneelement:before {
  content: '◻️ ';
  display: inline;
}

.doneelement[data-done="100"]:before {
  content: '✅ ';
  display: inline;
}

.tiptap.ProseMirror {
  padding: 5px;
}

.tiptap.ProseMirror a {
  text-decoration: underline;
}
/* ... */

